# fancy_eos_sdk

./: CMakeLists.txt  README.md  main.cpp
wallet/: eoswallet.cpp  eoswallet.h  eoswalletmanager.cpp  eoswalletmanager.h
